--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "redirects": [
     {
-      "source": "/(.*)",
-      "destination": "/"
+      "source": "/resume",
+      "destination": "https://muhammadumairkhan.vercel.app/resume"
     }
   ]
 }
